<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleStyle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/bt_titelstyle_edittext"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/titleStyleEditText"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            />


        <RadioButton
            android:id="@+id/rb_titelstyle_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/bt_titelstyle_dropdown"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left|center_vertical"
            android:text="@string/titleStyleDropdown"
            android:paddingLeft="20dp"
            />

        <RadioButton
            android:id="@+id/rb_titelstyle_dropdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            />

    </LinearLayout>


</LinearLayout>